--- a/Resolution Improvement.ipynb
+++ b/Resolution Improvement.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The dataset used in this project can be downloaded from http://ai.stanford.edu/~jkrause/cars/car_dataset.html\n"
     "from tensorflow.keras.layers import Input, Dense, Conv2D, MaxPooling2D, Dropout, Conv2DTranspose, UpSampling2D, add\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras import regularizers"
