--- a/Denoising.ipynb
+++ b/Denoising.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The dataset used in this project can be downloaded from https://www.kaggle.com/zalando-research/fashionmnist\n",
     "import tensorflow as tf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
